--- a/packages/qiao-is-online-browser/package.json
+++ b/packages/qiao-is-online-browser/package.json
@@ -16,7 +16,9 @@
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
   "scripts": {
-    "build": "qwebpack build ./webpack/qiao.webpack.js"
+    "dist": "qwebpack build ./webpack/qiao.webpack.js",
+    "build": "rollup --config rollup.config.js",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "offline-to-online": "^0.1.1"
