feat(insistime-web): del qiao-cos

--- a/packages/insistime/packages/insistime-web/package.json
+++ b/packages/insistime/packages/insistime-web/package.json
@@ -6,11 +6,9 @@
     "dev": "qwebpack dev ./webpack/qiao.webpack.js",
     "build": "qwebpack build ./webpack/qiao.webpack.js",
     "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js",
-    "upload1": "qcos fo /home/work/all_configs/0_insistime/config-cos.json /home/work/0_insistime/00_insistime/packages/insistime-server/web/static 00_insistime/static",
-    "upload2": "qcos fo ./config.json ../insistime-server/web/static 00_insistime/static"
+    "upload": "qcos fo ./config.json ../insistime-server/web/static 00_insistime/static"
   },
   "devDependencies": {
-    "qiao-cos": "^0.4.0",
     "qiao-webpack": "^0.7.1"
   },
   "dependencies": {
