--- a/packages/dishi-monorepo/packages/dishi-npm/package.json
+++ b/packages/dishi-monorepo/packages/dishi-npm/package.json
@@ -7,20 +7,20 @@
     "todo"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/insistime/dishi/tree/master/packages/dishi-npm#readme",
+  "homepage": "https://github.com/uikoo9/dishi-monorepo/tree/master/packages/dishi-npm#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/insistime/dishi.git"
+    "url": "git+https://github.com/uikoo9/dishi-monorepo.git"
   },
   "scripts": {},
   "bin": {
     "dishi": "./bin/dishi.js"
   },
   "dependencies": {
-    "qiao-ajax": "2.5.6",
-    "qiao-cli": "0.2.5",
+    "qiao-ajax": "2.6.2",
+    "qiao-cli": "0.2.8",
     "qiao-config": "0.2.7",
     "qiao-console": "0.1.0"
   }
