feat(qiao.db.js): md

--- a/packages/dishi-server-todo/package.json
+++ b/packages/dishi-server-todo/package.json
@@ -2,6 +2,7 @@
   "name": "dishi-server-todo",
   "private": true,
   "version": "0.1.2",
+  "main": "index.js",
   "dependencies": {
     "qiao-json": "^0.0.8",
     "qiao-mysql": "^0.1.5"
