--- a/packages/insistime-server/package.json
+++ b/packages/insistime-server/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.2.0",
   "dependencies": {
+    "dishi-server-todo": "^0.1.3",
     "qiao-server": "^0.1.8"
   }
 }
