--- a/packages/dishi-npm/package.json
+++ b/packages/dishi-npm/package.json
@@ -22,6 +22,7 @@
     "qiao-ajax": "2.6.2",
     "qiao-cli": "0.2.8",
     "qiao-config": "0.2.7",
-    "qiao-console": "0.1.0"
+    "qiao-console": "0.1.0",
+    "qiao-service": "^0.0.1"
   }
 }
