--- a/packages/qiao-index/package.json
+++ b/packages/qiao-index/package.json
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
   "dependencies": {
+    "qiao-service": "^0.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
