--- a/packages/dishi-npm/package.json
+++ b/packages/dishi-npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dishi",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "description": "dishi todo",
   "keywords": [
     "dishi",
@@ -19,7 +19,7 @@
     "dishi": "./bin/dishi.js"
   },
   "dependencies": {
-    "dishi-service": "0.0.0",
+    "dishi-service": "^0.0.1",
     "qiao-ajax": "^2.6.4",
     "qiao-cli": "^0.2.9",
     "qiao-config": "^0.2.8",
