--- a/packages/qiao-index/package.json
+++ b/packages/qiao-index/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "qiao-service": "^0.0.3",
+    "qiao-ui": "^0.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
