--- a/packages/qiao-parallel/package.json
+++ b/packages/qiao-parallel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qiao-parallel",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
@@ -11,6 +11,5 @@
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
-  "scripts": {},
-  "dependencies": {}
+  "scripts": {}
 }
