--- a/packages/qiao-lerna/package.json
+++ b/packages/qiao-lerna/package.json
@@ -23,5 +23,6 @@
     "qiao-cli": "^0.2.9",
     "qiao-console": "^0.1.0",
     "qiao-parallel": "^0.0.7"
-  }
+  },
+  "gitHead": "3ee6a703cf9078dfa740a3528439ba84bb9a0990"
 }
