--- a/packages/qiao-npms/package.json
+++ b/packages/qiao-npms/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "qiao-npm",
+  "name": "qiao-npms",
   "version": "0.0.1",
   "description": "npm package info",
   "keywords": [
     "download counts"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-npm#readme",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-npms#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -19,5 +19,6 @@
   },
   "dependencies": {
     "qiao-ajax": "^2.6.4"
-  }
+  },
+  "gitHead": "3ee6a703cf9078dfa740a3528439ba84bb9a0990"
 }
