--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "clean": "lerna clean -y",
     "init": "lerna bootstrap --ignore=qiao-electron-demo --ignore-prepublish",
     "check": "qlerna ncu ./packages",
+    "dc": "qlerna dc ./packages",
     "pkg": "qlerna pkg ./packages",
     "dpkg": "qlerna pkg ./packages 1",
     "ls": "lerna ls -l",
@@ -14,8 +15,8 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "qiao-cos": "^0.4.2",
-    "qiao-lerna": "^0.3.5",
-    "qiao-webpack": "^0.7.6",
-    "rollup": "^2.75.5"
+    "qiao-lerna": "^0.3.8",
+    "qiao-webpack": "^0.7.7",
+    "rollup": "^2.75.6"
   }
 }
