--- a/packages/qiao.db.js/package.json
+++ b/packages/qiao.db.js/package.json
@@ -15,5 +15,8 @@
   },
   "scripts": {
     "build": "qwebpack build ./webpack/qiao.webpack.js"
+  },
+  "devDependencies": {
+    "qiao-webpack": "^0.8.2"
   }
 }
