--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "qiao-lerna": "^0.4.0",
+    "qiao-webpack": "^0.8.3",
     "rollup": "^2.75.6"
   }
 }
