--- a/packages/qiao-ajax/package.json
+++ b/packages/qiao-ajax/package.json
@@ -27,8 +27,5 @@
   "dependencies": {
     "axios": "0.27.2"
   },
-  "sideEffects": false,
-  "devDependencies": {
-    "qiao-webpack": "^0.8.3"
-  }
+  "sideEffects": false
 }
