--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -20,6 +20,7 @@
     "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
