--- a/packages/insistime-web/package.json
+++ b/packages/insistime-web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "qiao-index": "^0.4.0",
     "qiao-service": "^0.0.5",
+    "qiao-ui": "^0.2.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
