--- a/packages/qiao-index/package.json
+++ b/packages/qiao-index/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "qiao-index",
-  "version": "0.4.0",
-  "description": "",
-  "keywords": [],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-index#readme",
-  "license": "MIT",
-  "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "dependencies": {
-    "qiao-service": "^0.0.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
-  },
-  "sideEffects": [
-    "**/*.scss"
-  ]
+    "name": "qiao-index",
+    "version": "0.4.0",
+    "description": "",
+    "keywords": [],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-index#readme",
+    "license": "MIT",
+    "main": "src/index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "dependencies": {
+        "js-cookie": "^3.0.1",
+        "qiao-service": "^0.0.5",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0"
+    },
+    "sideEffects": [
+        "**/*.scss"
+    ]
 }
