feat(insistime-web): cookie

--- a/packages/insistime-web/package.json
+++ b/packages/insistime-web/package.json
@@ -13,6 +13,7 @@
     "qiao-index": "^0.4.2",
     "qiao-service": "^0.0.5",
     "qiao-ui": "^0.2.7",
+    "qiao.cookie.js": "^0.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
