--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -9,18 +9,14 @@
   "author": "uikoo9 <uikoo9@qq.com>",
   "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-ui#readme",
   "license": "MIT",
-  "main": "src/components/index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
   "scripts": {
-    "dev": "qwebpack dev ./webpack/qiao.webpack.js",
-    "build": "qwebpack build ./webpack/qiao.webpack.js",
-    "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js"
   },
   "dependencies": {
-    "bootstrap": "5.2.0-beta1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
