--- a/packages/insistime-web/package.json
+++ b/packages/insistime-web/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "1.0.2",
   "scripts": {
-    "dev": "qwebpack dev ./webpack/qiao.webpack.js",
-    "build": "qwebpack build ./webpack/qiao.webpack.js",
-    "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js",
+    "dev": "qwebpack dev ./webpack/qiao-webpack.dev.js",
+    "build": "qwebpack build ./webpack/qiao-webpack.prod.js",
+    "analyzer": "qwebpack analyzer ./webpack/qiao-webpack.prod.js",
     "upload": "qcos fo ./config.json ../insistime-server/dist 00_insistime/static"
   },
   "dependencies": {
