--- a/packages/insistime-server/package.json
+++ b/packages/insistime-server/package.json
@@ -4,6 +4,7 @@
   "version": "0.9.4",
   "dependencies": {
     "dishi-server": "^0.1.5",
+    "qiao-npms": "^0.0.8",
     "qiao-server": "^0.2.6"
   }
 }
