--- a/packages/qiao.cookie.js/package.json
+++ b/packages/qiao.cookie.js/package.json
@@ -14,6 +14,11 @@
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
   "scripts": {
+    "eslint": "eslint . --ext .js",
+    "eslintfix": "eslint . --ext .js --fix",
     "build": "qwebpack build ./webpack/qiao.webpack.js"
+  },
+  "devDependencies": {
+    "eslint": "^8.19.0"
   }
 }
