--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "eslint": "^8.19.0",
     "qiao-lerna": "^0.4.2",
     "qiao-webpack": "^0.8.5",
     "rollup": "^2.75.6"
