--- a/packages/qiao.cookie.js/package.json
+++ b/packages/qiao.cookie.js/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "qiao.cookie.js",
-  "version": "0.0.2",
-  "description": "document cookie tools",
-  "keywords": [
-    "cookie"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao.cookie.js#readme",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {
-    "eslint": "eslint . --ext .js",
-    "eslintfix": "eslint . --ext .js --fix",
-    "build": "qwebpack build ./webpack/qiao.webpack.js"
-  }
+    "name": "qiao.cookie.js",
+    "version": "0.0.2",
+    "description": "document cookie tools",
+    "keywords": [
+        "cookie"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao.cookie.js#readme",
+    "license": "MIT",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "scripts": {
+        "dist": "qwebpack build ./webpack/qiao.webpack.js",
+        "eslint": "eslint . --ext .js",
+        "eslintfix": "eslint . --ext .js --fix",
+        "build": "rollup --config rollup.config.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    }
 }
