--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "eslint": "^8.19.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "qiao-lerna": "^0.4.2",
     "qiao-webpack": "^0.8.5",
     "rollup": "^2.75.6"
