--- a/packages/qiao.ls.js/package.json
+++ b/packages/qiao.ls.js/package.json
@@ -17,10 +17,10 @@
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
     },
     "scripts": {
-        "eslint": "eslint . --ext .js",
-        "eslintfix": "eslint . --ext .js --fix",
-        "build": "rollup --config rollup.config.js",
-        "test": "jest --config jest.config.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "build": "rollup --config _config.rollup.js",
+        "test": "jest --config _config.jest.js",
         "prepublish": "npm run build && npm run eslintfix"
     },
     "sideEffects": false
