--- a/packages/qiao.cookie.js/package.json
+++ b/packages/qiao.cookie.js/package.json
@@ -14,10 +14,10 @@
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
     },
     "scripts": {
-        "dist": "qwebpack build ./webpack/qiao.webpack.js",
+        "build": "rollup --config _config.rollup.js",
         "eslint": "eslint . --ext .js -c _config.eslint.js",
         "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
-        "build": "rollup --config _config.rollup.js",
+        "test": "jest --config _config.jest.js",
         "prepublish": "npm run build && npm run eslintfix"
     }
 }
