feat(qiao.ls.js): add bugs

--- a/packages/qiao.ls.js/package.json
+++ b/packages/qiao.ls.js/package.json
@@ -23,5 +23,8 @@
         "test": "jest --config _config.jest.js",
         "prepublish": "npm run build && npm run eslintfix"
     },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
     "sideEffects": false
 }
