--- a/packages/dishi-npm/package.json
+++ b/packages/dishi-npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dishi",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "dishi todo",
   "keywords": [
     "dishi",
@@ -22,8 +22,8 @@
     "dishi-service": "^0.0.9",
     "qiao-ajax": "^2.6.6",
     "qiao-cli": "^0.3.1",
-    "qiao-config": "^0.3.3",
-    "qiao-console": "0.1.0",
+    "qiao-config": "^0.3.4",
+    "qiao-console": "^0.1.1",
     "qiao-service": "^0.0.5"
   }
 }
