--- a/packages/qiao.ls.js/package.json
+++ b/packages/qiao.ls.js/package.json
@@ -12,6 +12,9 @@
     "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao.ls.js#readme",
     "license": "MIT",
     "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": ["src"],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
