--- a/packages/qiao.cookie.js/package.json
+++ b/packages/qiao.cookie.js/package.json
@@ -1,6 +1,6 @@
 {
     "name": "qiao.cookie.js",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "document cookie tools",
     "keywords": [
         "cookie"
@@ -11,7 +11,9 @@
     "main": "index.js",
     "module": "src/index.js",
     "sideEffets": false,
-    "files": ["src"],
+    "files": [
+        "src"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
