--- a/packages/qiao.ls.js/package.json
+++ b/packages/qiao.ls.js/package.json
@@ -21,14 +21,14 @@
         "type": "git",
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
     },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
     "scripts": {
         "build": "rollup --config _config.rollup.js",
         "eslint": "eslint . --ext .js -c _config.eslint.js",
         "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
-        "test": "jest --config _config.jest.js",
-        "prepublish": "npm run build && npm run eslintfix"
-    },
-    "bugs": {
-        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+        "prepublish": "npm run build && npm run eslintfix",
+        "test": "jest --config _config.jest.js"
     }
 }
