--- a/packages/insistime-web/package.json
+++ b/packages/insistime-web/package.json
@@ -15,7 +15,8 @@
     "qiao-ui": "^0.4.6",
     "qiao.cookie.js": "^1.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "qiao-cos": "^0.5.1"
