--- a/packages/qiao-server/package.json
+++ b/packages/qiao-server/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "qiao-server",
-  "version": "0.3.3",
-  "description": "",
-  "keywords": [],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-server#readme",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {
-    "build": "rollup --config rollup.config.js",
-    "prepublish": "npm run build"
-  },
-  "dependencies": {
-    "art-template": "^4.13.2",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
-    "express-art-template": "^1.0.1",
-    "qiao-encode": "^0.1.9",
-    "qiao-file": "^0.4.3",
-    "qiao-json": "^0.0.8",
-    "qiao-server-user": "^0.2.3"
-  }
+    "name": "qiao-server",
+    "version": "0.3.3",
+    "description": "",
+    "keywords": [],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-server#readme",
+    "license": "MIT",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    },
+    "dependencies": {
+        "art-template": "^4.13.2",
+        "cookie-parser": "^1.4.6",
+        "express": "^4.18.1",
+        "express-art-template": "^1.0.1",
+        "qiao-encode": "^0.1.9",
+        "qiao-file": "^0.4.3",
+        "qiao-json": "^0.0.8",
+        "qiao-server-user": "^0.2.3"
+    }
 }
