--- a/packages/qiao-server-coder/package.json
+++ b/packages/qiao-server-coder/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "qiao-coder",
+  "name": "qiao-server-coder",
   "version": "0.5.6",
-  "description": "qiao-coder",
+  "description": "qiao-server-coder",
   "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-coder#readme",
+  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-server-coder#readme",
   "license": "MIT",
   "main": "index.js",
   "repository": {
