--- a/packages/qiao-server-coder/package.json
+++ b/packages/qiao-server-coder/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {},
   "bin": {
-    "qcoder": "./bin/qcoder.js"
+    "qscoder": "./bin/qscoder.js"
   },
   "dependencies": {
     "art-template": "^4.13.2",
