--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -7,7 +7,7 @@
     "ui"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-ui/tree/master/packages/qiao-ui#readme",
+  "homepage": "https://github.com/uikoo9/qiao-ui",
   "license": "MIT",
   "main": "src/index.js",
   "module": "src/index.js",
