--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -25,11 +25,13 @@
         "url": "https://github.com/uikoo9/qiao-ui/issues"
     },
     "scripts": {
-        "eslint": "eslint . --ext .js -c _config.eslint.js",
-        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js"
+        "eslint": "eslint . --ext .js,.jsx -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js,jsx --fix -c _config.eslint.js",
+        "prepublish": "npm run eslintfix"
     },
     "devDependencies": {
         "eslint": "^8.19.0",
+        "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0"
     },
     "peerDependencies": {
