--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -37,5 +37,9 @@
     "peerDependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
+    },
+    "dependencies": {
+        "@wangeditor/editor": "^5.1.14",
+        "@wangeditor/editor-for-react": "^1.0.4"
     }
 }
