feat: editor --> peer

--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -30,15 +30,13 @@
         "prepublish": "npm run eslintfix"
     },
     "devDependencies": {
-        "eslint": "^8.19.0",
+        "eslint": "^8.22.0",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0"
     },
     "peerDependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
-    },
-    "dependencies": {
+        "react-dom": "^18.2.0",
         "@wangeditor/editor": "^5.1.14",
         "@wangeditor/editor-for-react": "^1.0.4"
     }
