--- a/packages/qiao.ls.js/package.json
+++ b/packages/qiao.ls.js/package.json
@@ -9,7 +9,7 @@
         "expires"
     ],
     "author": "uikoo9 <uikoo9@qq.com>",
-    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao.ls.js#readme",
+    "homepage": "https://github.com/uikoo9/qiao.ls.js#readme",
     "license": "MIT",
     "main": "index.js",
     "module": "src/index.js",
@@ -19,10 +19,10 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+        "url": "git+https://github.com/uikoo9/qiao.ls.js.git"
     },
     "bugs": {
-        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+        "url": "https://github.com/uikoo9/qiao.ls.js/issues"
     },
     "scripts": {
         "build": "rollup --config _config.rollup.js",
@@ -30,5 +30,11 @@
         "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
         "prepublish": "npm run build && npm run eslintfix",
         "test": "jest --config _config.jest.js"
+    },
+    "devDependencies": {
+        "eslint": "^8.22.0",
+        "jest": "^28.1.2",
+        "jest-environment-jsdom": "^28.1.2",
+        "rollup": "^2.75.6"
     }
 }
