--- a/packages/qiao-json/package.json
+++ b/packages/qiao-json/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "qiao-json",
-  "version": "0.0.8",
-  "description": "nodejs json data",
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-json#readme",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {}
+    "name": "qiao-json",
+    "version": "0.0.8",
+    "description": "nodejs json data",
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-json#readme",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    }
 }
