--- a/packages/qiao-webpack/package.json
+++ b/packages/qiao-webpack/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "babel-plugin-import": "^1.13.5",
+    "babel-plugin-prismjs": "^2.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
