--- a/packages/qiao-server/package.json
+++ b/packages/qiao-server/package.json
@@ -7,6 +7,11 @@
     "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-server#readme",
     "license": "MIT",
     "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
