--- a/packages/qiao.ls.js/package.json
+++ b/packages/qiao.ls.js/package.json
@@ -9,7 +9,7 @@
         "expires"
     ],
     "author": "uikoo9 <uikoo9@qq.com>",
-    "homepage": "https://github.com/uikoo9/qiao.ls.js#readme",
+    "homepage": "https://code.insistime.com/qiao.ls.js",
     "license": "MIT",
     "main": "index.js",
     "module": "src/index.js",
