--- a/packages/qiao-webpack/package.json
+++ b/packages/qiao-webpack/package.json
@@ -7,7 +7,7 @@
     "tools"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-webpack#readme",
+  "homepage": "https://code.insistime.com/qiao-webpack",
   "license": "MIT",
   "main": "index.js",
   "bin": {
@@ -19,27 +19,27 @@
   },
   "scripts": {},
   "dependencies": {
-    "@babel/core": "^7.18.13",
+    "@babel/core": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "babel-plugin-import": "^1.13.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
+    "css-minimizer-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
     "qiao-cli": "^0.3.2",
-    "sass": "^1.54.5",
+    "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.5",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-dev-server": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   }
 }
