--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -7,7 +7,7 @@
         "ui"
     ],
     "author": "uikoo9 <uikoo9@qq.com>",
-    "homepage": "https://github.com/uikoo9/qiao-ui",
+    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-ui#readme",
     "license": "MIT",
     "main": "src/index.js",
     "module": "src/index.js",
@@ -19,20 +19,15 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/uikoo9/qiao-ui.git"
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
     },
     "bugs": {
-        "url": "https://github.com/uikoo9/qiao-ui/issues"
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
     },
     "scripts": {
         "eslint": "eslint . --ext .js,.jsx -c _config.eslint.js",
         "eslintfix": "eslint . --ext .js,jsx --fix -c _config.eslint.js",
         "prepublish": "npm run eslintfix"
-    },
-    "devDependencies": {
-        "eslint": "^8.22.0",
-        "eslint-plugin-react": "^7.30.1",
-        "eslint-plugin-react-hooks": "^4.6.0"
     },
     "peerDependencies": {
         "react": "^18.2.0",
