--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "qiao-ui",
-    "version": "1.4.1",
+    "version": "1.4.2",
     "description": "qiao ui",
     "keywords": [
         "qiao",
@@ -30,9 +30,9 @@
         "prepublish": "npm run eslintfix"
     },
     "peerDependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "@wangeditor/editor": "^5.1.14",
-        "@wangeditor/editor-for-react": "^1.0.4"
+        "@wangeditor/editor-for-react": "^1.0.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
