--- a/packages/offline-to-online/package.json
+++ b/packages/offline-to-online/package.json
@@ -8,7 +8,7 @@
     "browser"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/offline-to-online#readme",
+  "homepage": "https://code.insistime.com/offline-to-online",
   "license": "MIT",
   "main": "index.js",
   "repository": {
