--- a/packages/qiao-ajax/package.json
+++ b/packages/qiao-ajax/package.json
@@ -10,7 +10,7 @@
     "request"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-ajax#readme",
+  "homepage": "https://code.insistime.com/qiao-ajax",
   "license": "MIT",
   "main": "index.js",
   "repository": {
