--- a/packages/qiao-electron-cli/_demo/qe-src/qe-renderer/package.json
+++ b/packages/qiao-electron-cli/_demo/qe-src/qe-renderer/package.json
@@ -4,7 +4,7 @@
   "description": "qiao-electron-cli renderer demo",
   "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-electron-cli#readme",
+  "homepage": "https://code.insistime.com/qiao-electron-cli",
   "license": "MIT",
   "repository": {
     "type": "git",
