--- a/packages/qiao-electron-cli/package.json
+++ b/packages/qiao-electron-cli/package.json
@@ -7,7 +7,7 @@
     "tools"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-electron-cli#readme",
+  "homepage": "https://code.insistime.com/qiao-electron-cli",
   "license": "MIT",
   "main": "index.js",
   "bin": {
