--- a/packages/qiao-encode/package.json
+++ b/packages/qiao-encode/package.json
@@ -13,7 +13,7 @@
     "md5"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-encode#readme",
+  "homepage": "https://code.insistime.com/qiao-encode",
   "license": "MIT",
   "main": "index.js",
   "repository": {
