--- a/packages/qiao-is-online-browser/package.json
+++ b/packages/qiao-is-online-browser/package.json
@@ -8,7 +8,7 @@
     "offline to online"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-is-online-browser#readme",
+  "homepage": "https://code.insistime.com/qiao-is-online-browser",
   "license": "MIT",
   "main": "index.js",
   "repository": {
