--- a/packages/qiao-log/package.json
+++ b/packages/qiao-log/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.2",
   "description": "nodejs log tools",
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-log#readme",
+  "homepage": "https://code.insistime.com/qiao-log",
   "license": "MIT",
   "main": "index.js",
   "repository": {
