--- a/packages/qiao-npms/package.json
+++ b/packages/qiao-npms/package.json
@@ -6,7 +6,7 @@
     "download counts"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-npms#readme",
+  "homepage": "https://code.insistime.com/qiao-npms",
   "license": "MIT",
   "main": "index.js",
   "repository": {
