--- a/packages/qiao-ping/package.json
+++ b/packages/qiao-ping/package.json
@@ -7,7 +7,7 @@
     "ping"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-ping#readme",
+  "homepage": "https://code.insistime.com/qiao-ping",
   "license": "MIT",
   "main": "index.js",
   "repository": {
