--- a/packages/qiao-request/package.json
+++ b/packages/qiao-request/package.json
@@ -10,7 +10,7 @@
     "imcp"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-request#readme",
+  "homepage": "https://code.insistime.com/qiao-request",
   "license": "MIT",
   "main": "index.js",
   "repository": {
