--- a/packages/qiao-server-coder/package.json
+++ b/packages/qiao-server-coder/package.json
@@ -4,7 +4,7 @@
   "description": "qiao-server-coder",
   "keywords": [],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-server-coder#readme",
+  "homepage": "https://code.insistime.com/qiao-server-coder",
   "license": "MIT",
   "main": "index.js",
   "repository": {
