--- a/packages/qiao-server-upload/package.json
+++ b/packages/qiao-server-upload/package.json
@@ -11,7 +11,7 @@
     "formidable"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-server-upload#readme",
+  "homepage": "https://code.insistime.com/qiao-server-upload",
   "license": "MIT",
   "main": "index.js",
   "repository": {
