--- a/packages/qiao-server/package.json
+++ b/packages/qiao-server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "keywords": [],
     "author": "uikoo9 <uikoo9@qq.com>",
-    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-server#readme",
+    "homepage": "https://code.insistime.com/qiao-server",
     "license": "MIT",
     "main": "index.js",
     "module": "src/index.js",
