--- a/packages/qiao-service/package.json
+++ b/packages/qiao-service/package.json
@@ -2,7 +2,7 @@
   "name": "qiao-service",
   "version": "0.1.1",
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-service#readme",
+  "homepage": "https://code.insistime.com/qiao-service",
   "license": "MIT",
   "main": "index.js",
   "repository": {
