--- a/packages/qiao-slink/package.json
+++ b/packages/qiao-slink/package.json
@@ -10,7 +10,7 @@
     "tiyee.cn"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-slink#readme",
+  "homepage": "https://code.insistime.com/qiao-slink",
   "license": "MIT",
   "main": "index.js",
   "repository": {
