--- a/packages/qiao-string/package.json
+++ b/packages/qiao-string/package.json
@@ -8,7 +8,7 @@
     "tool"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-string#readme",
+  "homepage": "https://code.insistime.com/qiao-string",
   "license": "MIT",
   "main": "index.js",
   "repository": {
