--- a/packages/qiao-ui/package.json
+++ b/packages/qiao-ui/package.json
@@ -7,7 +7,7 @@
         "ui"
     ],
     "author": "uikoo9 <uikoo9@qq.com>",
-    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-ui#readme",
+    "homepage": "https://code.insistime.com/qiao-ui",
     "license": "MIT",
     "main": "src/index.js",
     "module": "src/index.js",
