--- a/packages/qiao-weixin/package.json
+++ b/packages/qiao-weixin/package.json
@@ -9,7 +9,7 @@
     "weixin nodejs"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao-weixin#readme",
+  "homepage": "https://code.insistime.com/qiao-weixin",
   "license": "MIT",
   "main": "index.js",
   "repository": {
