--- a/packages/qiao.cookie.js/package.json
+++ b/packages/qiao.cookie.js/package.json
@@ -6,7 +6,7 @@
         "cookie"
     ],
     "author": "uikoo9 <uikoo9@qq.com>",
-    "homepage": "https://github.com/uikoo9/qiao-monorepo/tree/master/packages/qiao.cookie.js#readme",
+    "homepage": "https://code.insistime.com/qiao.cookie.js",
     "license": "MIT",
     "main": "index.js",
     "module": "src/index.js",
