feat(qiao.db.js): es6

--- a/packages/qiao.db.js/package.json
+++ b/packages/qiao.db.js/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "qiao.db.js",
-  "version": "0.2.9",
-  "description": "indexeddb tools",
-  "keywords": [
-    "indexeddb"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao.db.js",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {
-    "build": "qwebpack build ./webpack/qiao.webpack.js"
-  }
+    "name": "qiao.db.js",
+    "version": "0.2.9",
+    "description": "indexeddb tools",
+    "keywords": [
+        "indexeddb"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao.db.js",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix",
+        "pack": "qwebpack build ./webpack/qiao.webpack.js",
+        "test": "jest --config _config.jest.js"
+    }
 }
