feat(qiao-ua): publish

--- a/packages/qiao-ua/package.json
+++ b/packages/qiao-ua/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "qiao-useragent",
+    "name": "qiao-ua",
     "version": "1.0.0",
     "description": "parse useragent",
     "keywords": [
