--- a/packages/qiao-cli/package.json
+++ b/packages/qiao-cli/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "qiao-cli",
-  "version": "0.3.4",
-  "description": "nodejs cli tool",
-  "keywords": [
-    "nodejs",
-    "cli",
-    "tool"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-cli",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {},
-  "dependencies": {
-    "colors": "^1.4.0",
-    "commander": "^9.4.1",
-    "inquirer": "^9.1.4",
-    "progress": "^2.0.3"
-  }
+    "name": "qiao-cli",
+    "version": "0.3.4",
+    "description": "nodejs cli tool",
+    "keywords": [
+        "nodejs",
+        "cli",
+        "tool"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-cli",
+    "license": "MIT",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "prepublish": "npm run build && npm run eslintfix"
+    },
+    "dependencies": {
+        "colors": "^1.4.0",
+        "commander": "^9.4.1",
+        "inquirer": "^8.2.5",
+        "progress": "^2.0.3"
+    }
 }
