--- a/packages/qiao-z-user/package.json
+++ b/packages/qiao-z-user/package.json
@@ -22,5 +22,6 @@
         "qiao-encode": "^1.0.0",
         "qiao-mysql": "^0.1.7",
         "qiao-sms": "^0.1.2"
-    }
+    },
+    "gitHead": "3c78b1162039bad904dab3bc43dd8a204c08c373"
 }
