--- a/packages/qiao-z/package.json
+++ b/packages/qiao-z/package.json
@@ -38,5 +38,6 @@
         "qiao-ua": "^1.0.1",
         "qs": "^6.11.0",
         "raw-body": "^2.5.1"
-    }
+    },
+    "gitHead": "3c78b1162039bad904dab3bc43dd8a204c08c373"
 }
