--- a/packages/qiao-cos/package.json
+++ b/packages/qiao-cos/package.json
@@ -28,5 +28,6 @@
         "cos-nodejs-sdk-v5": "^2.11.15",
         "qiao-cli": "^1.0.1",
         "qiao-file": "^1.0.3"
-    }
+    },
+    "gitHead": "3c78b1162039bad904dab3bc43dd8a204c08c373"
 }
