--- a/packages/qiao-lerna/package.json
+++ b/packages/qiao-lerna/package.json
@@ -27,5 +27,6 @@
         "qiao-console": "^0.1.2",
         "qiao-npms": "^1.0.3",
         "qiao-parallel": "^1.0.5"
-    }
+    },
+    "gitHead": "3c78b1162039bad904dab3bc43dd8a204c08c373"
 }
